--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3.3'
-services:
 
+volumes:
+  pg_data:
+
+services:
+  db:
+    image: postgres:13.10
+    env_file: .env
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+  backend:
+    build: ./backend
+    env_file: .env
+    depends_on:
+      - db
   frontend:
     container_name: foodgram-front
     build: ../frontend
