--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,6 +2,15 @@ server {
     listen 80;
     client_max_body_size 10M;
 
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/api/;
+    }
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -9,6 +18,7 @@ server {
     
     location / {
         root /usr/share/nginx/html;
+        alias /staticfiles/;
         index  index.html index.htm;
         try_files $uri /index.html;
       }
