--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-version: '3'
+version: '3.3'
 
 volumes:
   pg_data:
+  static:
+  media:
 
 services:
   db:
@@ -12,8 +14,23 @@ services:
   backend:
     build: ./backend/
     env_file: .env
-    depends_on:
-      - db
+    volumes:
+      - static:/backend_static/
+      - media:/media/
   frontend:
+    container_name: foodgram-front
+    build: ./frontend
+    volumes:
+      - ./frontend/:/app/result_build/
+  nginx:
+    container_name: foodgram-proxy
+    build: ./gateway/
     env_file: .env
-    build: ./frontend/
+    ports:
+      - 8000:80
+    volumes:
+      - static:/staticfiles/
+      - media:/media/
+      - ./gateway/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/build:/usr/share/nginx/html/
+      - ./docs/:/usr/share/nginx/html/api/docs/
