--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -5,21 +5,34 @@ server {
     server_tokens off;
     client_max_body_size 10M;
 
-  location /api/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/;
-  }
-  location /admin/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/admin/;
-  }
+    location /api/ {
+        proxy_pass http://backend:8000/api/;
+        proxy_set_header Host $host;
+    }
 
-  location / {
-    alias /static/;
-    try_files $uri $uri/ /index.html;
-  }
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+        proxy_set_header Host $host;
+    }
 
-  location /media/ {
-    alias /media/;
-  }
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri /index.html;
+    }
+
+
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }
+
+    location /django_static/ {
+        alias /django_static/;
+    }
+
+    location /media/ {
+        alias /media/;
+    }
+
 }
