--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -30,5 +30,6 @@ services:
     volumes:
       - backend_static:/django_static/
       - media:/media/
+      - ./backend/data:/app/data
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
