--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 volumes:
   pg_data:
-  static:
+  backend_static:
   media:
 
 services:
@@ -15,7 +15,7 @@ services:
     build: ./backend/
     env_file: .env
     volumes:
-      - static:/backend_static/
+      - backend_static:/django_static/
       - media:/media/
   frontend:
     container_name: foodgram-front
@@ -29,7 +29,7 @@ services:
     ports:
       - 8000:80
     volumes:
-      - static:/staticfiles/
+      - backend_static:/django_static/
       - media:/media/
       - ./gateway/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
