--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,10 @@ exclude =
     infra/,
 per-file-ignores =
     */settings.py:E501
+
+[isort]
+sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+known_first_party = api,core
+known_local_folder = recipes,users
+lines_between_sections = 1
+
